<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp">

    <EditText
        android:id="@+id/et_task_desc"
        android:textSize="32sp"
        android:hint="@string/enter_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/btn_set_notification_date"
        android:textSize="16sp"
        android:padding="8dp"
        android:background="@color/colorAccent"
        android:text="@string/set_alarm_date"
        android:onClick="showDatePickerDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_task_desc"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/btn_set_notification_time"
        android:textSize="16sp"
        android:padding="8dp"
        android:background="@color/colorAccent"
        android:text="@string/set_alarm_time"
        android:onClick="showTimePickerDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toBottomOf="@id/et_task_desc"
        app:layout_constraintRight_toRightOf="parent"/>


    <TextView
        android:id="@+id/tv_alarm_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_set_notification_date" />

    <TextView
        android:id="@+id/tv_alarm_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_set_notification_time" />


    <RadioGroup
        android:id="@+id/rg_single_repeat"
        app:layout_constraintTop_toBottomOf="@id/tv_alarm_date"
        android:checkedButton="@id/rb_single_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_single_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/single_alarm"
            android:layout_marginRight="32dp"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/rb_repeat_daily_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_daily_alarm"
            android:layout_marginRight="32dp"
            android:onClick="onRadioButtonClicked"/>


        <RadioButton
            android:id="@+id/rb_repeat_weekly_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_weekly_alarm"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_add_alarm"
        android:textSize="16sp"
        android:text="@string/sched_alarm"
        android:background="@color/colorPrimaryLight"
        android:onClick="setAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/rg_single_repeat"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_task_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add_alarm"
        android:layout_margin="16dp"
        android:textSize="16sp"/>

</android.support.constraint.ConstraintLayout>
</ScrollView>